[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "waplex"
version = "0.1.0"
description = "WAPlex WhatsApp gateway client for FastAPI SaaS apps"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
]

[project.urls]
Repository = "https://github.com/your-org/waplex"
