[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "waplex"
version = "0.1.0"
description = "WAPlex WhatsApp gateway client for FastAPI SaaS apps"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Vikram Kumar", email = "kumavikram@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/vikramkumar/waplex"
